--- a/Stopwatch/stopwatch3.ui
+++ b/Stopwatch/stopwatch3.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1487</width>
-    <height>1082</height>
+    <width>1398</width>
+    <height>1014</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -34,7 +34,7 @@
            <widget class="PlotWidget" name="waveform_widget" native="true">
             <property name="minimumSize">
              <size>
-              <width>1000</width>
+              <width>500</width>
               <height>100</height>
              </size>
             </property>
@@ -63,7 +63,7 @@
             </property>
             <property name="maximumSize">
              <size>
-              <width>981</width>
+              <width>600</width>
               <height>16777215</height>
              </size>
             </property>
@@ -95,6 +95,37 @@
            </widget>
           </item>
           <item>
+           <widget class="QTableWidget" name="tableWidget">
+            <property name="minimumSize">
+             <size>
+              <width>130</width>
+              <height>0</height>
+             </size>
+            </property>
+            <property name="maximumSize">
+             <size>
+              <width>340</width>
+              <height>16777215</height>
+             </size>
+            </property>
+            <column>
+             <property name="text">
+              <string>Receiver</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Voltage</string>
+             </property>
+            </column>
+            <column>
+             <property name="text">
+              <string>Signal</string>
+             </property>
+            </column>
+           </widget>
+          </item>
+          <item>
            <layout class="QVBoxLayout" name="verticalLayout">
             <property name="spacing">
              <number>10</number>
@@ -106,7 +137,7 @@
              <number>10</number>
             </property>
             <property name="rightMargin">
-             <number>50</number>
+             <number>30</number>
             </property>
             <property name="bottomMargin">
              <number>20</number>
@@ -592,7 +623,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1487</width>
+     <width>1398</width>
      <height>21</height>
     </rect>
    </property>
