Picture and Hue are send to the Arduino now as separate variables

--- a/LED_Poi_Studio/GUI.ui
+++ b/LED_Poi_Studio/GUI.ui
@@ -748,7 +748,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QSlider" name="horizontalSlider_2">
+               <widget class="QSlider" name="colorSlider">
                 <property name="minimumSize">
                  <size>
                   <width>500</width>
