--- a/LED_Poi_Studio/Studio_GUI.ui
+++ b/LED_Poi_Studio/Studio_GUI.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>LED Poi Studio</string>
   </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>icon_LS_v1.png</normaloff>icon_LS_v1.png</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
@@ -82,7 +86,7 @@
             </column>
             <column>
              <property name="text">
-              <string>ID</string>
+              <string>Receiver</string>
              </property>
             </column>
             <column>
@@ -569,6 +573,9 @@ QPushButton:pressed {
                 </item>
                 <item>
                  <widget class="QLabel" name="label_3">
+                  <property name="enabled">
+                   <bool>true</bool>
+                  </property>
                   <property name="minimumSize">
                    <size>
                     <width>100</width>
@@ -587,9 +594,11 @@ QPushButton:pressed {
                     <pointsize>9</pointsize>
                    </font>
                   </property>
+                  <property name="autoFillBackground">
+                   <bool>false</bool>
+                  </property>
                   <property name="styleSheet">
-                   <string notr="true">background-color: rgb(220, 220, 220);
-</string>
+                   <string notr="true"/>
                   </property>
                   <property name="frameShape">
                    <enum>QFrame::Box</enum>
@@ -800,8 +809,7 @@ QPushButton:pressed {
                </font>
               </property>
               <property name="styleSheet">
-               <string notr="true">background-color: rgb(220, 220, 220);
-</string>
+               <string notr="true"/>
               </property>
               <property name="frameShape">
                <enum>QFrame::Box</enum>
