--- a/GUI_files/Studio_GUI_new_v2.ui
+++ b/GUI_files/Studio_GUI_new_v2.ui
@@ -608,6 +608,19 @@ QPushButton:pressed {
                   </property>
                  </widget>
                 </item>
+                <item>
+                 <spacer name="verticalSpacer_2">
+                  <property name="orientation">
+                   <enum>Qt::Orientation::Vertical</enum>
+                  </property>
+                  <property name="sizeHint" stdset="0">
+                   <size>
+                    <width>20</width>
+                    <height>40</height>
+                   </size>
+                  </property>
+                 </spacer>
+                </item>
                </layout>
               </item>
               <item>
@@ -877,8 +890,14 @@ QPushButton:pressed {
                <widget class="QLabel" name="label_5">
                 <property name="minimumSize">
                  <size>
-                  <width>50</width>
+                  <width>60</width>
                   <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>80</width>
+                  <height>16777215</height>
                  </size>
                 </property>
                 <property name="text">
@@ -902,7 +921,7 @@ QPushButton:pressed {
                 </property>
                 <property name="maximumSize">
                  <size>
-                  <width>500</width>
+                  <width>600</width>
                   <height>30</height>
                  </size>
                 </property>
@@ -954,6 +973,19 @@ QPushButton:pressed {
                 </property>
                </widget>
               </item>
+              <item>
+               <spacer name="horizontalSpacer">
+                <property name="orientation">
+                 <enum>Qt::Orientation::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
              </layout>
             </item>
             <item>
@@ -962,8 +994,14 @@ QPushButton:pressed {
                <widget class="QLabel" name="label_2">
                 <property name="minimumSize">
                  <size>
-                  <width>50</width>
+                  <width>60</width>
                   <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>80</width>
+                  <height>16777215</height>
                  </size>
                 </property>
                 <property name="text">
@@ -981,7 +1019,7 @@ QPushButton:pressed {
                 </property>
                 <property name="maximumSize">
                  <size>
-                  <width>16777215</width>
+                  <width>600</width>
                   <height>30</height>
                  </size>
                 </property>
@@ -1006,6 +1044,38 @@ QPushButton:pressed {
                 </property>
                </widget>
               </item>
+              <item>
+               <widget class="QPushButton" name="pushButton_10">
+                <property name="minimumSize">
+                 <size>
+                  <width>50</width>
+                  <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>80</width>
+                  <height>16777215</height>
+                 </size>
+                </property>
+                <property name="text">
+                 <string>Refresh</string>
+                </property>
+               </widget>
+              </item>
+              <item>
+               <spacer name="horizontalSpacer_2">
+                <property name="orientation">
+                 <enum>Qt::Orientation::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
+              </item>
              </layout>
             </item>
             <item>
@@ -1014,8 +1084,14 @@ QPushButton:pressed {
                <widget class="QLabel" name="label_18">
                 <property name="minimumSize">
                  <size>
-                  <width>50</width>
+                  <width>60</width>
                   <height>0</height>
+                 </size>
+                </property>
+                <property name="maximumSize">
+                 <size>
+                  <width>80</width>
+                  <height>16777215</height>
                  </size>
                 </property>
                 <property name="text">
@@ -1033,7 +1109,7 @@ QPushButton:pressed {
                 </property>
                 <property name="maximumSize">
                  <size>
-                  <width>16777215</width>
+                  <width>600</width>
                   <height>30</height>
                  </size>
                 </property>
@@ -1069,6 +1145,19 @@ QPushButton:pressed {
                  <string>Open</string>
                 </property>
                </widget>
+              </item>
+              <item>
+               <spacer name="horizontalSpacer_3">
+                <property name="orientation">
+                 <enum>Qt::Orientation::Horizontal</enum>
+                </property>
+                <property name="sizeHint" stdset="0">
+                 <size>
+                  <width>40</width>
+                  <height>20</height>
+                 </size>
+                </property>
+               </spacer>
               </item>
              </layout>
             </item>
@@ -1157,8 +1246,11 @@ QPushButton:pressed {
                 <property name="pageStep">
                  <number>1</number>
                 </property>
+                <property name="value">
+                 <number>10</number>
+                </property>
                 <property name="sliderPosition">
-                 <number>2</number>
+                 <number>10</number>
                 </property>
                 <property name="orientation">
                  <enum>Qt::Orientation::Horizontal</enum>
@@ -1476,7 +1568,7 @@ Picture 50: rainbow_worm_61_150.bmp</string>
      <x>0</x>
      <y>0</y>
      <width>1180</width>
-     <height>25</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
